Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextObjIntegerField.quorum
class Main
    integer v = 5
    action Main
        Test(v)
    end

    action Test(Text var)
    end
end
